--- a/200318.Rmd
+++ b/200318.Rmd
@@ -11,6 +11,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
+```{r}
+library(googlesheets4)
+library(dplyr)
+library(lubridate)
+```
+##安裝 Packages
+```{r} 
+install.packages(c("dplyr", "lubridate"))
+
+```
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
@@ -28,3 +38,17 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## Creat object
+```{r}
+a <- 2
+a = 2 # = 與 <-同義
+```
+
+```{r}
+a
+```
+
+```{r}
+3 -> b
+```
+
