--- a/200318.Rmd
+++ b/200318.Rmd
@@ -42,13 +42,22 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 ```{r}
 a <- 2
 a = 2 # = 與 <-同義
-```
 
-```{r}
+3 -> b
+
 a
 ```
-
+## name rule
 ```{r}
-3 -> b
+my_108_total_credits <- 15
+_108_total_credits <- 15
+108_total_credits <- 15
+_my_108_total_credits <- 15
+my.108.total_credits <- 15
+.108.total_credits <- 15 # 隱藏變數
+.my.108.total_credits <- 15
+我的108學年總學分數 <- 15
+`我的108學年總學分數` <- 15 # 特殊名稱處理，`不是名稱的一部份
+`.108.total_credits` <- 15
 ```
 
