--- a/200318.Rmd
+++ b/200318.Rmd
@@ -1,9 +1,36 @@
 ---
-title: '200318'
+title: '200325'
 author: "yung-yu"
-date: "2020/3/18"
+date: "2020/3/25"
 output: html_document
 ---
+```{r}
+library(googlesheets4)
+install.packages(c("googlesheets4"))
+install.packages(c("googlesheets4","tidyverse"))
+```
+
+```{r}
+a <- 2
+a = 2 # = 與 <-同義
+```
+
+```{r}
+3 -> b
+```
+
+```{r}
+my_108_total_credits <- 15
+_108_total_credits <- 15
+108_total_credits <- 15
+_my_108_total_credits <- 15
+my.108.total_credits <- 15
+.108.total_credits <- 15 # 隱藏變數
+.my.108.total_credits <- 15
+我的108學年總學分數 <- 15
+`我的108學年總學分數` <- 15 # 特殊名稱處理，`不是名稱的一部份
+`.108.total_credits` <- 15
+```
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -11,16 +38,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-```{r}
-library(googlesheets4)
-library(dplyr)
-library(lubridate)
-```
-##安裝 Packages
-```{r} 
-install.packages(c("dplyr", "lubridate"))
-
-```
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
@@ -38,24 +55,3 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-## Creat object
-```{r}
-`我的年紀` <-19
-my_age <-`我的年紀`
-
-my_age
-```
-## name rule
-```{r}
-my_108_total_credits <- 15
-_108_total_credits <- 15
-108_total_credits <- 15
-_my_108_total_credits <- 15
-my.108.total_credits <- 15
-.108.total_credits <- 15 # 隱藏變數
-.my.108.total_credits <- 15
-我的108學年總學分數 <- 15
-`我的108學年總學分數` <- 15 # 特殊名稱處理，`不是名稱的一部份
-`.108.total_credits` <- 15
-```
-
