--- a/200401.Rmd
+++ b/200401.Rmd
@@ -61,3 +61,134 @@ StudentTime <- c(
 StudentTime
 ```
 
+#List
+
+```{r}
+vectorExample <- c(2,6,7)
+listExample <- list(2,6,7)
+
+print(vectorExample)
+print(listExample)
+```
+
+每個元素值可以是不同type的物件值
+```{r}
+c("2020-03-31T13:40:55Z" ,
+  "一芳",
+  "2杯",
+  "水果茶")
+
+#用list儲存
+library(lubridate)
+list(ymd_hms("2020-03-31T13:40:55Z"),#Date/Time class
+  "一芳", #character
+  2, #numeric
+  "水果茶" #character
+  )
+print("小明交易1")
+```
+
+件值可以是vector形式，也可以list
+```{r}
+c(
+  c("108學年第1學期","高級會計學","高等統計學"), #向量1
+  c("108學年第2學期","食在拉丁美洲") #向量2
+)
+```
+
+```{r}
+#用list
+list(
+  c("108學年第1學期","高級會計學","高等統計學"), #向量1
+  c("108學年第2學期","食在拉丁美洲") #向量2
+)
+```
+
+```{r}
+# list含兩個vectors
+`小明108學年課表A` <- list(
+  c("108-1","高級會計學","高等統計學"),
+  c("108-2","食在拉丁美洲")
+)
+print(`小明108學年課表A`)
+```
+
+```{r}
+# list含兩個lists
+`小明108學年課表B` <- list(
+  list("108-1","高級會計學","高等統計學"),
+  list("108-2","食在拉丁美洲")
+)
+print(`小明108學年課表B`)
+```
+
+```{r}
+# list含兩個lists, 子層list又各含兩個vectors
+`小明108學年課表C` <- list(
+  list(
+    c("108-1"), # 可只寫 "108-1"
+    c("高級會計學","高等統計學")
+       ),
+  list(
+    c("108-2"),
+    c("食在拉丁美洲")
+  )
+)
+print(`小明108學年課表C`)
+```
+
+物件值可以取名
+```{r}
+# list含兩個lists, 子層list又各含兩個vectors
+`小明108學年課表D` <- list(
+  `上學期`=list(
+    semester=c("108-1"), # 可只寫 "108-1"
+    courses=c("高級會計學","高等統計學")
+       ),
+  `下學期`=list(
+    semester=c("108-2"),
+    courses=c("食在拉丁美洲")
+  )
+)
+print(`小明108學年課表D`)
+```
+
+
+```{r}
+# list含兩個lists, 子層list又各含兩個vectors
+`小明108學年課表C` <- list(
+  `108學年第1學期`=list(
+    c("108-1"), # 可只寫 "108-1"
+    c("高級會計學","高等統計學")
+       ),
+  `108學年第2學期`=list(
+    c("108-2"),
+    c("食在拉丁美洲")
+  )
+)
+print(`小明108學年課表C`)
+```
+
+## Gitub Commit
+
+```{r}
+commit<-list(
+  #author1=c(
+    #"Martin老師",
+    #"mtlin@gm.ntpu.edu.tw",
+    #"2020-03-25T07:17:40Z"),
+  author=list(
+    "Martin老師",
+    "mtlin@gm.ntpu.edu.tw",
+    ymd_hms("2020-03-25T07:17:40Z")
+    ),
+ committer=list(
+   "emilyluckey",
+   "emily007@gmail.com",
+   ymd_hms("2020-03-26T08:18:40Z")
+   ),
+ message=c("update")
+)
+print(commit)
+```
+
