--- a/200401.Rmd
+++ b/200401.Rmd
@@ -172,23 +172,53 @@ print(`小明108學年課表C`)
 ## Gitub Commit
 
 ```{r}
+library(lubridate)
+```
+
+
+```{r}
 commit<-list(
   #author1=c(
     #"Martin老師",
     #"mtlin@gm.ntpu.edu.tw",
     #"2020-03-25T07:17:40Z"),
   author=list(
-    "Martin老師",
-    "mtlin@gm.ntpu.edu.tw",
-    ymd_hms("2020-03-25T07:17:40Z")
+    name="Martin老師",
+    email="mtlin@gm.ntpu.edu.tw",
+    time=ymd_hms("2020-03-25T07:17:40Z")
     ),
  committer=list(
-   "emilyluckey",
-   "emily007@gmail.com",
-   ymd_hms("2020-03-26T08:18:40Z")
+   name="emilyluckey",
+   email="emily007@gmail.com",
+   time=ymd_hms("2020-03-26T08:18:40Z")
    ),
- message=c("update")
+ message="update"
 )
 print(commit)
+```
+
+```{r}
+browseURL("https://api.github.com/repos/tpemartin/108-2-56-inclass-practice/commits") 
+```
+
+```{r}
+library(jsonlite) # 不少同學這行會有Error，還記得如何排除嗎？
+toJSON(commit)
+```
+
+```{r}
+library(jsonlite)
+fromJSON("https://opendata.cwb.gov.tw/fileapi/v1/opendataapi/F-C0032-001?Authorization=rdec-key-123-45678-011121314&format=JSON") ->
+  weather_next36hours
+```
+
+##3.7
+
+```{r}
+save(commit,listExample,`小明108學年課表C`,file="today.Rda")
+```
+
+```{r}
+load("today.Rda")
 ```
 
