--- a/200408.Rmd
+++ b/200408.Rmd
@@ -215,3 +215,64 @@ print(selectmarkets)
 str(taipeiNightMarkets[selectmarkets], max.level = 1)
 ```
 
+```{r}
+str(listExample,max.level = 3)
+```
+
+```{r}
+get1 <- listExample[["學期"]]
+get2 <- listExample["學期"]
+```
+
+```{r}
+str(listExample,max.level = 3)
+```
+
+```{r}
+get1 # 學期拿出來，有3個元素的list
+str(get1,max.level = 1)
+```
+
+```{r}
+get2 # listExample 只留下 學期元素，是個只有一個元素的list
+str(get2,max.level = 2)
+```
+
+```{r}
+str(get1,max.level = 1)
+```
+
+```{r}
+str(get2,max.level = 2)
+```
+
+### 連鎖選取
+
+
+```{r}
+numVector <- c(2,3,6,-1,4,2,6)
+select1 <- numVector[c(1,4)]; select1
+select2 <- select1[[1]]; select2
+
+# 相當於
+numVector[c(1,4)][[1]]
+```
+
+```{r}
+select1 <- numVector[c(T,T,F,T,F,F,T)]; select1
+select2 <- select1[c(1,4)]; select2
+
+# 相當於
+numVector[c(T,T,F,T,F,F,T)][c(1,4)]
+```
+
+```{r}
+majors <- c("經濟學系","經濟學系","社會學系","社工系","經濟學系")
+names <- c("小英", "小美", "大雄","阿華", "阿尼")
+gender <- c("F","F","M","F","M")
+```
+.創造出只要“經濟學系”學生的邏輯向量，econOnly。
+.選出econOnly的names與gender。
+.在econOnly的gender下創造出只要“F”的邏輯向量, econFemaleOnly。
+.選出names中為“經濟學系”且“F”的姓名。
+
