--- a/200415.Rmd
+++ b/200415.Rmd
@@ -210,3 +210,134 @@ list1[[2]] <- list(
 str(list1)
 ```
 
+```{r}
+list1[[2]]$status <- c(height=163, weight=45)
+list1[[1]]$status[["height"]] <- 176
+str(list1)
+```
+
+```{r}
+list1[[1]][["age"]] <- 21 #此方法較佳
+list1[[2]]["age"] <- list(21)
+
+# 改變「一個」時，使用[[ ]]比較不會錯。
+str(list1)
+```
+
+```{r}
+list1[[1]][c("bloodType","registered")] <- list("AB",TRUE)
+
+str(list1)
+```
+
+108-1新增一個“產業經濟學”。
+產業經濟學，同時加上教師Wen及成績88。
+
+```{r}
+listExample <- 
+  list(
+    student="小明",
+    `學期`=list(
+      `108-1`=list(
+        list(
+          name="個體經濟學",
+          teacher="Alice",
+          grade=85
+        )
+      ),
+      `108-2`=list(
+        list(
+          name="總體經濟學",
+          teacher="Mark",
+          grade=78
+        )
+      )
+    )
+  )
+# 有多少位置可選：
+length(listExample)
+str(listExample)
+```
+
+```{r}
+# 108-1新增一科目成績
+listExample$`學期`$`108-1`[[2]] <-
+  list(name="產業經濟學")
+str(listExample)
+#產業經濟學，同時加上教師Wen及成績88
+listExample$`學期`$`108-1`[[2]][c("teacher","grade")] <- 
+  list(
+    "Wen",
+    88
+    )
+str(listExample)
+```
+
+## 刪除可以使用[- c(數字位置)]
+
+```{r}
+print(a)
+a[-c(1,3)]
+a[c(-2)]
+
+print(a)
+a[-c(1,3)] -> a # 要回存才算真的刪除
+print(a)
+```
+
+```{r}
+library(lubridate)
+list1 <- 
+  list(
+    list(
+      name="Jack",
+      birthday=ymd("1998-03-21"),
+      status=c(height=177, weight=80)
+    ),
+    list(
+      name="Mary",
+      birthday=ymd("1998-08-24"),
+      status=c(height=163, weight=45),
+      age=21,
+      bloodType="AB"
+    )
+  )
+str(list1)
+```
+
+
+刪除Jack的status.
+
+```{r}
+list1[[1]][-c(3)] -> list1[[1]]
+str(list1)
+```
+
+刪除Mary的status, blookType
+```{r}
+list1[[2]][-c(3,5)] -> list1[[2]]
+str(list1)
+```
+
+```{r}
+str(list1)
+list1[[2]][c(1,2)] <- NULL #不用回存
+str(list1)
+```
+
+```{r}
+library(jsonlite)
+fromJSON("https://data.ntpc.gov.tw/od/data/api/54DDDC93-589C-4858-9C95-18B2046CC1FC?$format=json", simplifyDataFrame = F) -> newTaipeiYouBike
+str(newTaipeiYouBike[[2]])
+newTaipeiYouBike[[2]][-c(2,5,6)] -> newTaipeiYouBike[[2]]
+str(newTaipeiYouBike[[2]])
+```
+
+```{r}
+library(jsonlite)
+fromJSON("https://data.ntpc.gov.tw/od/data/api/54DDDC93-589C-4858-9C95-18B2046CC1FC?$format=json", simplifyDataFrame = F) -> newTaipeiYouBike
+str(newTaipeiYouBike[[2]])
+newTaipeiYouBike[[2]][c(2,5,6)] <- NULL
+str(newTaipeiYouBike[[2]])
+```
+
