--- a/200429.Rmd
+++ b/200429.Rmd
@@ -269,6 +269,218 @@ example$name[pick_allowanceOver1000]
 jsonlite::fromJSON("https://www.dropbox.com/s/3uijub7xheib405/list_victimAges_female.json?dl=1", simplifyDataFrame = F) -> list_victimAges_female
 ```
 
+example裡誰血型B型
+
+```{r}
+print(example[c("name","bloodType")])
+
+pick_bloodB <- example$bloodType == "B"
+example$name[pick_bloodB]
+```
+
+```{r}
+sequenceNums <- c(11, 6, 8, 11, 12, 11, 3, 7, 10, 8)
+
+pick_evens <- (sequenceNums %% 2) == 0
+sequenceNums[pick_evens]
+```
+
+%in%: 屬於
+左邊元素「一一」檢視是不是屬於右邊元素集合
+
+```{r}
+x <- c(1,5,8)
+y <- c(5,8)
+
+# x裡的元素值是不是屬於y集合
+x %in% y
+```
+
+example裡誰來自大台北
+
+```{r}
+print(example[c("name","residence")])
+
+set_TaipeiMetro <- c("Taipei","New Taipei")
+pick_fromTaipeiMetro <- example$residence %in% set_TaipeiMetro
+example$name[pick_fromTaipeiMetro]
+```
+
+
+```{r}
+str(transcript100to103)
+```
+
+
+```{r}
+set_LawBusiness <- c(
+  "法學院","商學院"
+)
+pick_LawBusiness <- transcript100to103$`學院` %in% set_LawBusiness
+```
+
+```{r}
+levels(factor(transcript100to103$`學院`))
+unique(transcript100to103$`學院`)
+```
+
+在「要/不要」向量前加上!會成為否定句的「要/不要」向量，元素裡的TRUE會轉成FALSE, FALSE則轉成TRUE
+
+```{r}
+pick_not_fromTaipeiMetro <- ! pick_fromTaipeiMetro
+# 或
+pick_not_fromTaipeiMetro <- !(example$residence %in% set_TaipeiMetro) # (..) 裡面會先運算完才做外面!的處理
+```
+
+
+```{r}
+print(example[c("name","residence")])
+
+example$name[pick_fromTaipeiMetro]
+example$name[pick_not_fromTaipeiMetro]
+```
+
+is.na: 有缺失
+is.{class/type name}: is.integer, is.character, is.factor … etc
+
+有時資料有缺失，在R裡會記成NA(即not available)如下例：
+
+```{r}
+x2 <- c(1,NA,10)
+y2 <- c(-1,NA,20)
+
+x3 <- c(NA,"小花")
+y3 <- c(NA,"小華")
+```
+
+前述的關係判斷遇到NA時，結果都會是NA——即無法判斷。要知道向量內各元素值是否NA，可使用is.na()
+
+```{r}
+x2
+is.na(x2)
+```
+
+
+```{r}
+c(22,NA,18) -> a
+a==NA
+is.na(a)
+```
+
+example裡誰沒有體重資料
+
+```{r}
+print(example[c("name","weight")])
+
+pick_na <- is.na(example$weight)
+example$name[pick_na]
+```
+
+R還有一種特別的缺失資料NaN (即not a number)，出現在沒有定義的數學運算上，如
+
+```{r}
+0/0
+```
+
+##練習
+創立 可選出缺失資料的「要/不要」向量pick_na, 並計算有多少筆缺失
+
+```{r}
+list_victimAges_female$`數目` <- as.integer(list_victimAges_female$`數目`)
+```
+
+
+```{r}
+pick_na <- is.na(list_victimAges_female$`數目`)
+total_na <- sum(pick_na) # TRUE = 1, FALSE = 0
+print(total_na)
+```
+
+example裡誰喜歡美食
+
+```{r}
+print(example[c("name","hobby")])
+
+pick_loveFood <- stringr::str_detect(example$hobby,"美食")
+example$name[pick_loveFood]
+```
+
+常有同學會有以下錯誤寫法
+
+```{r}
+pick_loveFood <- example$hobby == "美食"
+pick_loveFood
+```
+
+新增一個假設的hobby2
+
+```{r}
+example[["hobby2"]] <- c("美食", "時尚", "美食", "旅遊")
+
+print(example[c("name", "hobby2")])
+pick_loveFood2 <- example$hobby2 == "美食"
+example$name[pick_loveFood2]
+```
+
+```{r}
+jsonlite::fromJSON("https://data.ntpc.gov.tw/od/data/api/EDC3AD26-8AE7-4916-A00B-BC6048D19BF8?$format=json") ->
+  garbageRoutes
+```
+
+```{r}
+#  1 用typeof()函數查詢電腦實質上如何看待garbageRoutes。
+typeof(garbageRoutes)  
+#  2 用class()函數查詢電腦把它能進行的操作運算歸屬於哪一類型。
+class(garbageRoutes)
+```
+
+```{r}
+# 由linename元素判斷垃圾車有幾條路線。
+factor(garbageRoutes$linename) -> garbageRoutes$linename
+levels(garbageRoutes$linename)
+  
+# 由linename創造： 可篩選出下午路線的「要/不要」向量pick_afternoonRoutes。
+pick_afternoonRoutes <-
+  stringr::str_detect(
+    garbageRoutes$linename,
+    "下午"
+  )
+garbageRoutes$linename[pick_afternoonRoutes]
+```
+
+```{r}
+library(stringr)
+?str_detect
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
+```{r}
+
+```
+
 ```{r}
 
 ```
