--- a/200603.Rmd
+++ b/200603.Rmd
@@ -162,24 +162,183 @@ askSilly_weather <- function(locationInput,dateInput){
 ```
 
 ```{r}
-
+askSilly_weather("臺中市",today())
+askSilly_weather("花蓮縣",today())
 ```
 
 ```{r}
+now()
+```
 
+## 綜合練習
+打造一個國際時間轉換機器人叫what_time_it_is，使用方式如：
+```{r}
+what_time_it_is <- function(zone){
+  time <- with_tz(now(), tz=zone)
+  return(time)
+}
+what_time_it_is("Europe/Paris")
 ```
 
 ```{r}
-
+class(demand_return)
 ```
 
 ```{r}
-
+# 查詢函數formals arguments要求
+formals(askSilly_weather)
 ```
 
 ```{r}
-
+# 查詢函數主體
+body(askSilly_weather)
 ```
+
+函數可以存在list裡
+```{r}
+learning_topics <- 
+  list(
+    subject="函數",
+    date=lubridate::ymd("2020-06-03"),
+    functionsCreated=list(
+      demand=demand_return # 等號右邊是呼叫demand_return的定義值，也就是function(...){...}值定義本身。
+    )
+  )
+```
+
+```{r}
+learning_topics$functionsCreated$demand(1.2)
+```
+
+5.2.4 Environment
+```{r}
+typeof(demand_return) #電腦如何存物件
+```
+
+function本身的運作並不能只靠它的定義值function(...){...}，還要有適當的環境（environment）條件才能生存。若物件的生存運作需要有適當的環境，表示電腦要存這個物件時還需要包含（enclose）它的（生存）環境一起存。這種儲存型態叫closure（閉包）。
+
+```{r}
+# 查詢函數執行所要求環境
+environment(demand_return)
+```
+
+```{r}
+# 若函數執行需要Global environment已存在某些物件，查詢需要哪些物件
+codetools::findGlobals(demand_return)
+```
+
+```{r}
+intercept <- 10
+slope <- -5
+myDemand <- function(p){
+  q_d <- intercept + slope*p
+  return(q_d)
+}
+```
+
+```{r}
+environment(demand_return)
+environment(myDemand)
+```
+
+```{r}
+codetools::findGlobals(demand_return)
+codetools::findGlobals(myDemand) 
+
+# myDemand對Global environment的要求多了intercept及slope
+```
+
+```{r}
+# 移除global environment裡的intercept及slope
+rm(intercept, slope)
+```
+
+```{r}
+demand_return(1.2) # 維持正常運作
+```
+
+```{r}
+myDemand(1.2) # 無法運作
+```
+
+myDemand的運作需要global environment裡的intercept, slope物件。這表示
+
+沒有intercept, slope在global environment裡它無法運作。
+
+global environment裡的intercept, slope值若有改變，它的運作結果也會不同。(這種「要運作才去呼叫值」的特性叫Lazy evaluation，惰性求值)
+
+```{r}
+intercept <- 10
+slope <- -5
+myDemand(1.2)
+```
+
+```{r}
+slope <- -1
+myDemand(1.2) 
+```
+
+```{r}
+intercept <- 5
+slope <- -1.2
+myDemand(1.2)
+```
+## 5.2.5 預設值
+
+函數lazy evaluation的特性，讓函數的運作：
+
+具有隨時可改變運作狀態的彈性； 但
+
+該工具若落在電腦知識不足的使用者手上會有誤動global environment而產生運作錯誤的危機。
+```{r}
+myDemand2 <- function(p, intercept=10, slope=-5){
+  q_d <- intercept + slope*p
+  return(q_d)
+}
+```
+
+```{r}
+environment(myDemand2)
+codetools::findGlobals(myDemand2) # 不依靠global env裡的intercept/slope
+```
+
+```{r}
+myDemand2(1.2) #intercept=10, slope=-5
+myDemand2(1.2, slope=-1) #intercept=10, slope=-1
+myDemand2(1.2, intercept=5, slope=-1.2) #intercept=5, slope=-1.2
+```
+
+預設值是「平常不需要動到的彈性arguments」，習慣上定義時最好放在arguments的最後面。
+
+
+## 5.2.6 綜合練習
+```{r}
+jsonlite::fromJSON("https://data.ntpc.gov.tw/api/datasets/07F7CCB3-ED00-43C4-966D-08E9DAB24E95/json/preview") -> busArrivalForecast # 公車預估到站時間 https://data.ntpc.gov.tw/datasets/07F7CCB3-ED00-43C4-966D-08E9DAB24E95
+
+jsonlite::fromJSON("https://data.ntpc.gov.tw/api/datasets/0EE4E6BF-CEE6-4EC8-8FE1-71F544015127/json/preview") -> busRoutes # 公車路線清單 https://data.ntpc.gov.tw/datasets/0EE4E6BF-CEE6-4EC8-8FE1-71F544015127
+
+jsonlite::fromJSON("https://data.ntpc.gov.tw/api/datasets/34B402A8-53D9-483D-9406-24A682C2D6DC/json/preview") -> busStopsInfo # 公車站位資訊 https://data.ntpc.gov.tw/datasets/34B402A8-53D9-483D-9406-24A682C2D6DC
+```
+
+打造公車到站預報機器人when_busArrives：
+
+```{r}
+library(stringr)
+name <- stringr::str_detect(busRoutes$, "916")
+name
+when_busArrives <- function(){
+  
+}
+when_busArrives("916","臺北大學正門")
+```
+
+
+
+
+
+
+
+
 
 
 
